--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,13 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>sammons.io</title>
+    <style>
+        body {
+            width: 500px;
+            margin: auto;
+            padding-top: 30px;
+        }
+    </style>
 </head>
 
 <body>
