--- a/static/index.html
+++ b/static/index.html
@@ -169,8 +169,8 @@
         <div class="statement">
             <p>
                 My name is Ben Sammons and I love building software that enhances and streamlines existing business processes. Many people
-                go to work every day to suffer the inadequacies of software they are required to use, or lack of software
-                altogether. I am focusing my career on combatting this problem.
+                go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
+                altogether. My passion lies with combatting this problem.
             </p>
             <p>I believe in empowering people to achieve amazing things never previously possible, not replacing them with software.</p>
             <p>
