adding meta data

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,12 @@
 <html>
 
 <head>
-
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="cache-control" content="max-age=3600" />
     <meta http-equiv="cache-control" content="Public" />
     <meta http-equiv="expires" content="3600" />
     <meta http-equiv="pragma" content="Public" />
+    <title>Benjamin D. Sammons - Software Engineer</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -26,7 +27,25 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>sammons.io</title>
+    <meta name="author" content="Ben Sammons">
+    <meta name="description" content="Many people
+                go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
+                altogether. My passion lies with combatting this problem.">
+    <meta name="keywords" content="">
+    <meta property="og:image" content="/prof2.jpg">
+    <meta property="og:title" content="Benjamin D. Sammons - Software Engineer">
+    <meta property=”og:site_name” content=”sammons.io”>
+    <meta property=”og:type content="Personal Website">
+    <meta property=”og:description” content="Many people
+                go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
+                altogether. My passion lies with combatting this problem.”>
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="Benjamin D. Sammons - Software Engineer">
+    <meta property="twitter:description" content="Many people
+                go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
+                altogether. My passion lies with combatting this problem.">
+    <meta property="twitter:image" content="/prof2.jpg">
+    <meta name="pubdate" content="20160526">
     <style defer>
         @font-face {
             font-family: 'Cabin';
