make background white

--- a/static/index.html
+++ b/static/index.html
@@ -111,7 +111,7 @@
         
         body {
             color: #444444;
-            background-color: #EDFCFE;
+            background-color: white;
             font-family: Cabin;
         }
         
