--- a/static/index.html
+++ b/static/index.html
@@ -202,6 +202,9 @@
             <li></li>
             <li></li>
             <li><a href="mailto:ben+web@sammons.io">Email</a></li>
+            <li></li>
+            <li></li>
+            <li><a href="https://www.linkedin.com/in/benjamin-sammons-228bb159/">LinkedIn</a></li>
         </ul>
     </div>
     <div class="content">
@@ -219,7 +222,17 @@
             </p>
             <p>I believe in empowering people to achieve amazing things never previously possible, not replacing them with software.</p>
             <p>
-                Right now I am living this dream building <a href="https://hyperfish.com">Hyperfish</a> in Kirkland, WA.
+                From 2010 to 2015 I studied at the University of Missouri. I studied Biochemistry, and then Computer Science, eventually earning a Bachelors in Computer Science.
+                During that time I interned or worked part-time for a learning technology research project named iSocial, Archer Daniels Midland, Garmin, and then the College of Business.
+            </p>
+            <p>
+                In 2014/2015 I tried to help fix US money transfers at <a href="https://dwolla.com">Dwolla</a> in their office in San Francisco, WA.
+            </p>
+            <p>
+                In 2016/2017 I helped work on <a href="https://hyperfish.com">Hyperfish</a> in Kirkland, WA.
+            </p>
+            <p>
+                Now I've found my way to Baltimore, MD, where I am subcontracting for the Social Security Administration.
             </p>
         </div>
     </div>
