--- a/static/index.html
+++ b/static/index.html
@@ -226,7 +226,7 @@
                 During that time I interned or worked part-time for a learning technology research project named iSocial, Archer Daniels Midland, Garmin, and then the College of Business.
             </p>
             <p>
-                In 2014/2015 I tried to help fix US money transfers at <a href="https://dwolla.com">Dwolla</a> in their office in San Francisco, WA.
+                In 2014/2015 I tried to help fix US money transfers at <a href="https://dwolla.com">Dwolla</a> in their office in San Francisco, CA.
             </p>
             <p>
                 In 2016/2017 I helped work on <a href="https://hyperfish.com">Hyperfish</a> in Kirkland, WA.
