content and formatting

--- a/static/index.html
+++ b/static/index.html
@@ -60,11 +60,12 @@
                 width: 380px;
             }
             .top-menu-stuff {
-                padding-top: 10px;
+                padding-top: 00px;
                 width: 380px;
+                text-align: center;
             }
             .top-menu-stuff > ul {
-                padding-left: 20px;
+                padding-left: 0px;
             }
             .links {
                 position: static;
@@ -90,7 +91,7 @@
             }
             .links {
                 position: relative;
-                left: 130px;
+                left: 60px;
             }
             .portrait-container {
                 width: 150px;
@@ -229,7 +230,7 @@
                 In 2014/2015 I tried to help fix US money transfers at <a href="https://dwolla.com">Dwolla</a> in their office in San Francisco, CA.
             </p>
             <p>
-                In 2016/2017 I helped work on <a href="https://hyperfish.com">Hyperfish</a> in Kirkland, WA.
+                In 2016/2017 I improved the quality of active directory data everywhere while working at <a href="https://hyperfish.com">Hyperfish</a> in Kirkland, WA.
             </p>
             <p>
                 Now I've found my way to Baltimore, MD, where I am subcontracting for the Social Security Administration.
