--- a/static/index.html
+++ b/static/index.html
@@ -34,11 +34,11 @@
     <meta name="keywords" content="">
     <meta property="og:image" content="/prof3.jpg">
     <meta property="og:title" content="Benjamin D. Sammons - Software Engineer">
-    <meta property=”og:site_name” content=”sammons.io”>
-    <meta property=”og:type content="Personal Website">
-    <meta property=”og:description” content="Many people
+    <meta property="og:site_name" content="sammons.io">
+    <meta property="og:type content=" Personal Website">
+    <meta property="og:description" content="Many people
                 go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
-                altogether. My passion lies with combatting this problem.”>
+                altogether. My passion lies with combatting this problem.">
     <meta property="
         twitter:card" content="summary">
     <meta property="twitter:title" content="Benjamin D. Sammons - Software Engineer">
