test coffee page

--- a/static/coffee.html
+++ b/static/coffee.html
@@ -188,6 +188,9 @@
   <div class="top-menu-stuff">
     <h3 class="name">Benjamin D. Sammons</h3>
     <ul class="links">
+      <li><a href="https://www.sammons.io">Home</a></li>
+    </ul>
+    <ul class="links">
       <li><a href="https://www.sweetmarias.com">Sweet Marias</a></li>
     </ul>
   </div>
@@ -201,16 +204,26 @@
     <div class="statement">
       <p>
         College really turned me on to coffee.
-        <br />
+      </p>
+      <p>
         Then pour-over turned me on to grinding my own beans.
-        <br />
+      </p>
+      <p>
         The next step would have been roasting my own, but in reading the material put out by Sweet Marias, a green
         bean supplier, I thought.... "Wow! they really know a lot about this, maybe I can just get what they make?".
-        <br />
+      </p>
+      <p>
         So for a little more than a year now I've been co-chugging this coffee with my wife. I've started keeping track
-        of the labels for the ones I really enjoy:
+        of the labels for the ones I really enjoy (in no particular order):
       </p>
       <ul>
+        <li>
+          <div>
+            <p>Guatemala Huehuetenango Finca Rosma Lot 1</p>
+            <p>Roasted to Full City on 10/09/2018</p>
+            <p>Bittersweet cocoa notes with a cranberry acidity.</p>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
