--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <meta name="pubdate" content="20181101">
     <style defer>
         @font-face {
-            font-family: 'Cabin';
-            font-style: normal;
+            font-family: 'Inter UI';
+            font-style:  normal;
             font-weight: 400;
-            src: local('Cabin Regular'), local('Cabin-Regular'), url(Cabin.woff2) format('woff2');
-            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+            src: url("Inter-UI-Regular.woff2") format("woff2"),
+                url("Inter-UI-Regular.woff") format("woff");
         }
 
         @media only screen and (max-width: 600px) {
@@ -109,7 +109,7 @@
         body {
             color: #444444;
             background-color: white;
-            font-family: Cabin;
+            font-family: Inter UI;
         }
 
         .content {
@@ -154,20 +154,20 @@
 
         a {
             text-decoration: none;
-            font-family: Cabin;
+            font-family: Inter UI;
             letter-spacing: 1px;
             line-height: 1.5em;
         }
 
         h3 {
-            font-family: Cabin;
+            font-family: Inter UI;
             color: #333333;
             letter-spacing: 1px;
             line-height: 1.5em;
         }
 
         p {
-            font-family: Cabin;
+            font-family: Inter UI;
             color: #444444;
             letter-spacing: 1px;
             line-height: 1.5em;
