try to fix title alignment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="Public" />
     <meta http-equiv="expires" content="3600" />
     <meta http-equiv="pragma" content="Public" />
-    <title style="margin: auto;">Benjamin D. Sammons - Software Engineer</title>
+    <title style="margin: auto; text-align: center;">Benjamin D. Sammons - Software Engineer</title>
     <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
