reduce name size

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 <body>
     <div class="top-menu-stuff">
-        <h3 class="name">Benjamin D. Sammons</h3>
+        <h3 class="name">Ben Sammons</h3>
         <ul class="links">
             <li><a href="https://github.com/sammons">Code</a></li>
             <li></li>
