--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
                 altogether. My passion lies with combatting this problem.">
     <meta name="keywords" content="">
-    <meta property="og:image" content="/prof3.jpg">
+    <meta property="og:image" content="prof3.jpg">
     <meta property="og:title" content="Benjamin D. Sammons - Software Engineer">
     <meta property="og:site_name" content="sammons.io">
     <meta property="og:type content=" Personal Website">
