--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="expires" content="3600" />
     <meta http-equiv="pragma" content="Public" />
     <title>Benjamin D. Sammons - Software Engineer</title>
-    <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon-194x194.png" sizes="194x194">
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Ben Sammons">
@@ -31,7 +31,7 @@
     <meta property="twitter:description" content="Many people
                 go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
                 altogether. My passion lies with combatting this problem.">
-    <meta property="twitter:image" content="/prof3.jpg">
+    <meta property="twitter:image" content="prof3.jpg">
     <meta name="pubdate" content="20181101">
     <style defer>
         @font-face {
@@ -98,7 +98,7 @@
         .portrait-container {
             padding: 0px;
             margin: auto;
-            background-image: url("/prof3.jpg");
+            background-image: url("prof3.jpg");
             background-size: cover;
             background-position-y: 0px;
             border-radius: 60%;
@@ -207,7 +207,7 @@
     </div>
     <div class="content">
         <div class="portrait-container">
-            <!--<img src="/prof.jpg" alt="portrait" class="portrait">-->
+            <!--<img src="prof.jpg" alt="portrait" class="portrait">-->
         </div>
         <div class="hello">
             <h2>Hello!</h2>
