--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         .portrait-container {
             padding: 0px;
             margin: auto;
+            margin-top: 50px;
             background-image: url("prof3.jpg");
             background-size: cover;
             background-position-y: 0px;
@@ -137,6 +138,7 @@
 
         .hello {
             text-align: center;
+            margin-bottom: 50px;
         }
 
         .statement {
