--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 iSocial, Archer Daniels Midland, Garmin, and then the College of Business.
             </p>
             <p>
-                In 2014/2015 I tried to help fix US money transfers at <a href="https://dwolla.com">Dwolla</a> in their
+                In 2014/2015 I tried to help fix the state of US money transfers at <a href="https://dwolla.com">Dwolla</a> in their
                 office in San Francisco, CA.
             </p>
             <p>
