--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <li><a href="https://github.com/sammons">Code</a></li>
             <li></li>
             <li></li>
-            <li><a href="https://sammons.silvrback.com">Blog</a></li>
+            <li><a href="https://write.as/sammons/">Blog</a></li>
             <li></li>
             <li></li>
             <li><a href="mailto:ben+web@sammons.io">Email</a></li>
