update text to add amazon

--- a/index.html
+++ b/index.html
@@ -239,12 +239,15 @@
                 in Kirkland, WA.
             </p>
             <p>
-                Now I've found my way to Baltimore, MD, where I am subcontracting for the Social Security
-                Administration.
+                From 2017/2019 I worked in Baltimore, MD, where I am subcontracted for the Social Security
+                Administration on the Disability Case Processing System (DCPS).
+            </p>
+            <p>
+                In July 2019 Amazon hired me as a Virtual SDE, where I am working in HR to support associates everywhere.
             </p>
         </div>
     </div>
-    <div class="stupid-footer-that-should-not-need-to-exist">Copyright Ben Sammons 2018</div>
+    <div class="stupid-footer-that-should-not-need-to-exist">Copyright Ben Sammons 2020</div>
 </body>
 
 </html>
