Update resume, drop blog link in favor of resume link given lack of activity on write.as

--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
             <li><a href="https://github.com/sammons">Code</a></li>
             <li></li>
             <li></li>
-            <li><a href="https://write.as/sammons/">Blog</a></li>
+            <!-- <li><a href="https://write.as/sammons/">Blog</a></li> -->
+            <li><a href="https://sammons.io/resume-2023.pdf">Resume</a></li>
             <li></li>
             <li></li>
             <li><a href="mailto:ben+web@sammons.io">Email</a></li>
@@ -247,7 +248,7 @@
             </p>
         </div>
     </div>
-    <div class="stupid-footer-that-should-not-need-to-exist">Copyright Ben Sammons 2020</div>
+    <div class="stupid-footer-that-should-not-need-to-exist">Copyright Ben Sammons 2023</div>
 </body>
 
 </html>
