Work on phrasing/tenses

--- a/resume.html
+++ b/resume.html
@@ -98,6 +98,7 @@
 
     .experience-element .description {
       padding-bottom: 2px;
+      font-size: 90%;
     }
 
     .experience-element .technology,
@@ -284,7 +285,7 @@
       </div>
       <div class="right">
         <p class="description">
-          Private equity startup (acquired 2018) building a Business Directory Analyzer with a self-service update interface.
+          Private equity startup (acquired 2018) that innovated a Business Directory Analyzer with a self-service update interface.
           Built backend and synchronization with on-prem agents.
         </p>
         <ul class="traits">
@@ -323,7 +324,7 @@
       </div>
       <div class="right">
         <p class="description">
-          Money transfers with a white label ACH API. 
+          VC FinTech Startup with p2p transfers and a white label ACH API. 
           Built Scala microservices focused on automated reconciliation and reconstruction of historic financial event data.
         </p>
         <ul class="traits">
@@ -353,8 +354,8 @@
       </div>
       <div class="right">
         <p class="description">
-          Aviation device database team.
-          Built vendor data adapters to release aviation map features in new countries.
+          Aviation device database team that packed map data.
+          Crafted vendor data adapters to release aviation map features in new countries.
         </p>
         <ul class="traits">
           <li>Agile</li>
@@ -381,7 +382,7 @@
       </div>
       <div class="right">
         <p class="description">
-          Mizzou Business Department.
+          University of Missouri Business Department.
           Maintained MSSQL databases and built an inventory management web app for the IT Director.
         </p>
         <ul class="traits">
@@ -405,7 +406,7 @@
       </div>
       <div class="right">
         <p class="description">
-          CRS insurance's AEROS platform innovated bringing iPads to the field.
+          Insurance platform that innovated bringing iPads to the field.
           Wrote features for adjusters including complex >1000 line MS SQL procedures.
         </p>
         <ul class="traits">
@@ -429,8 +430,8 @@
       </div>
       <div class="right">
         <p class="description">
-          iSocial researched remote game-based educational support for students needing a special educator.
-          Prototyped experimental game modules for the Team
+          Research project that studied game-based classes for remote students needing a special educator.
+          Prototyped experimental game modules for the team.
         </p>
         <ul class="traits">
           <li>Game Development</li>
