--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <li></li>
             <li></li>
             <!-- <li><a href="https://write.as/sammons/">Blog</a></li> -->
-            <li><a href="https://sammons.io/resume-2023.pdf">Resume</a></li>
+            <li><a href="https://sammons.io/resume-2023-v2.pdf">Resume</a></li>
             <li></li>
             <li></li>
             <li><a href="mailto:ben+web@sammons.io">Email</a></li>
