Formatting tweaks to minimize overall 'size'

--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,13 @@
     body {
       display: flex;
       flex-direction: column;
-      padding: 25px;
       width: 790px;
-      height: 1010px;
+      /* height: 1010px; */
       margin: auto;
+      margin-top: 50px;
+      margin-left: 32px;
+      margin-right: 32px;
+      padding-bottom: 0px;
     }
 
     * {
@@ -43,7 +46,7 @@
       flex-wrap: wrap;
       justify-content: center;
       width: 100%;
-      padding-bottom: 8px;
+      padding-bottom: 6px;
     }
 
     #highlights p {
@@ -66,7 +69,7 @@
       width: 100%;
       display: flex;
       flex-direction: row;
-      padding-bottom: 16px;
+      padding-bottom: 8px;
     }
 
     .experience-element .left {
@@ -119,14 +122,14 @@
       white-space: nowrap;
       text-align: center;
       list-style: none;
-      padding-top: 3px;
-      padding-bottom: 3px;
-      padding-left: 6px;
-      padding-right: 6px;
+      padding-top: 2px;
+      padding-bottom: 2px;
+      padding-left: 3px;
+      padding-right: 3px;
       margin: 2px;
       border-radius: 5%;
       font-size: xx-small;
-      height: 12px;
+      height: 11px;
     }
 
     .experience-element .technology li {
@@ -159,8 +162,9 @@
 
     .pic {
       height: 0;
-      position: absolute;
-      right: 32px;
+      position: relative;
+      left: 315px;
+      bottom: 50px;
     }
   </style>
 </head>
@@ -175,12 +179,12 @@
 
   <h1 style="width: 100%;">
     Benjamin D. Sammons
+    <div class="pic">
+      <img src="./prof5.png" width="90"></img>
+    </div>
   </h1>
 
 
-  <div class="pic">
-    <img src="./prof5.png" width="90"></img>
-  </div>
 
   <div id="highlights">
     <p>
